--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_storage: ^13.0.3
   image_picker: ^1.2.0
   provider: ^6.1.5+1
+  cloudinary_public: ^0.23.1
 
 dev_dependencies:
   flutter_test:
