--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,10 @@ dependencies:
   cloud_firestore: ^6.0.3
   firebase_storage: ^13.0.3
   image_picker: ^1.2.0
-  provider: ^6.1.5+1
+  provider: ^6.0.0
   cloudinary_public: ^0.23.1
+  intl: ^0.19.0
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
