--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   cloudinary_public: ^0.23.1
   intl: ^0.19.0
   badges: ^3.1.2
+  webview_flutter: ^4.0.0
 
 dev_dependencies:
   flutter_test:
