--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_map: ^6.0.1
   latlong2: ^0.9.0
   geolocator: ^10.1.0
+  url_launcher: ^6.1.11
 
 dev_dependencies:
   flutter_test:
